<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <hu.bme.aut.android.snakegame.view.DrawingView
        android:id="@+id/canvas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/toolbar"
        android:background="@android:color/holo_green_dark" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary" />

    <ImageButton
        android:id="@+id/btn_left"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="19dp"
        app:srcCompat="@drawable/ic_left" />

    <ImageButton
        android:id="@+id/btn_right"
        android:layout_width="107dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/ic_right" />

    <ImageButton
        android:id="@+id/btn_up"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="157dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="77dp"
        app:srcCompat="@drawable/ic_up" />

    <ImageButton
        android:id="@+id/btn_down"
        android:layout_width="110dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="156dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/ic_down" />

    <Button
        android:id="@+id/btn_newGame"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="72dp"
        android:text="@string/new_game" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="73dp"
        android:text="@string/back" />

    <TextView
        android:id="@+id/score_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_text"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>